package de.othr.bib48218.chat.entity;

import java.util.List;

public abstract class Chat {
    private List<Message> messages;
}
