package de.othr.bib48218.chat.entity;

public enum ChatMemberStatus {
    Administrator,
    Member,
    Restricted,
    Left,
    Kicked,
}
