package de.othr.bib48218.chat.entity;

public class ChatMembership {
    private ChatMemberStatus status;
    private Chat chat;
    private User user;
}
