package de.othr.bib48218.chat.entity;

public class GroupChat extends Chat {
    private GroupVisibility visibility;
    private ChatProfile profile;
}
