@startuml

' classes in alphabetical order
abstract class Chat <<IdEntity>> {
    title : String
    description : String
    image : File
    owner : Person
}

class ChatMembership {
    user : User
    chat : Chat
    status : ChatMemberStatus
}

enum ChatMemberStatus {
    Administrator
    Member
    Restricted
    Left
    Kicked
}

abstract class Content {
    get_content()
}

abstract class FileContent {
    size : int
    name : String
    mime_type : String
}

class GroupChat {
    getInvitationLink()
}

class Login {
    service : String
    login_token : String
}

class Message <T extends Content> <<IdEntity>> {
    timestamp : Datetime
    author : User
    chat : Chat
    content : T
    reply_to : Message
}

class Person {
    first_name : String
    last_name : String
    country : String
    email : String
    logins : Login
}

class PrivateChat

enum Service {
    Webshop
    Bank
    Payment_Service
}

class TextContent {
    text : String
}

abstract class User <<IdEntity>> {
    username : String
    profil_image : File
}

' Inheritance
'' Chat inheritance
Chat <|-- PrivateChat
Chat <|-- GroupChat
Chat <|-- Channel

'' Content inheritance
Content <|-- TextContent
FileContent -|> Content

'' FileContent inheritance
FileContent <|-- VideoContent
FileContent <|-- ImageContent
FileContent <|-- VoiceContent
FileContent <|-- DocumentContent

'' Person inheritance
Person -|> User
User <|- Bot

' Generic binding
Content .|> Message : <<bind>> <<T::Content>>

' Relations
'' to Chat
Person "1" *--> "*" Chat : owner >
User "*" o--> "*" Chat : member >
(User, Chat) .. ChatMembership

'' to Message
User "1" --> "*" Message : sends >
Message "*" -- "1" Chat

'' with Enumerations
Service --+ Login
ChatMembership +-- ChatMemberStatus

'' Misc
Login "*" <- "1" Person
@enduml
